--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
-    - python >=3.6
+    - python >=3.6,<3.8
     - tensorflow-base >=2.1.0
     - tensorflow-probability >=0.8.0
     - scipy >=1.2
