--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - iminuit
     - colorlog
     - texttable
+    - tableformatter
     - ordered-set
     - numdifftools
     - colored
