--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,11 @@ requirements:
     - iminuit
     - colorlog
     - texttable
+    - tabulate
     - ordered-set
     - numdifftools
+    - colored
+    - colorama
     # Workaround for https://github.com/conda-forge/tensorflow-probability-feedstock/pull/11
     - decorator
     - cloudpickle >=0.6.1
