--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,13 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<3.8
+    - python >=3.6
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
-    - python >=3.6,<3.8
-    - tensorflow-base >=2.1.0
-    - tensorflow-probability >=0.8.0
+    - python >=3.6
+    - tensorflow-base >=2.2.0
+    - tensorflow-probability >=0.9.0
     - scipy >=1.2
     - uproot
     - pandas
