--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,17 +17,17 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<3.8
+    - python >=3.6,<3.9
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
-    - python >=3.6,<3.8
-    - tensorflow-base >=2.1.0
-    - tensorflow-probability >=0.8.0
+    - python >=3.6,<3.9
+    - tensorflow-base ==2.2
+    - tensorflow-probability ==0.10
     - scipy >=1.2
     - uproot
     - pandas
-    - numpy
+    - numpy>=1.16
     - iminuit
     - colorlog
     - texttable
@@ -38,7 +38,7 @@ requirements:
     - colorama
     # Workaround for https://github.com/conda-forge/tensorflow-probability-feedstock/pull/11
     - decorator
-    - cloudpickle >=0.6.1
+    - cloudpickle == 1.3
 
 test:
   imports:
