--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,8 +37,8 @@ requirements:
     - colored
     - colorama
     # Workaround for https://github.com/conda-forge/tensorflow-probability-feedstock/pull/11
-    - decorator
-    - cloudpickle ==1.3
+    # - decorator
+    # - cloudpickle ==1.3
 
 test:
   imports:
