--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,20 +22,21 @@ requirements:
     - setuptools_scm_git_archive
   run:
     - python >=3.6,<3.8
-    - tensorflow-base >=2.1.0
-    - tensorflow-probability >=0.8.0
-    - scipy >=1.2
-    - uproot
-    - pandas
-    - numpy
-    - iminuit
-    - colorlog
-    - texttable
-    - tabulate
-    - ordered-set
-    - numdifftools
-    - colored
-    - colorama
+- tensorflow-base >=2.3.1,<2.4
+- tensorflow_probability==0.11
+- scipy>=1.2
+- uproot
+- pandas
+- numpy>=1.16
+- iminuit>=1.4
+- colorlog
+- texttable
+- tabulate
+- colored
+- colorama
+- ordered-set
+- numdifftools
+- tensorflow-addons
 
 test:
   imports:
