--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,12 +23,12 @@ requirements:
   run:
     - python >=3.6,<3.8
 - tensorflow-base >=2.3.1,<2.4
-- tensorflow_probability==0.11
-- scipy>=1.2
+- tensorflow_probability ==0.11
+- scipy >=1.2
 - uproot
 - pandas
-- numpy>=1.16
-- iminuit>=1.4
+- numpy >=1.16
+- iminuit >=1.4
 - colorlog
 - texttable
 - tabulate
