--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,28 +17,28 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<3.8
+    - python >=3.6,<3.9
     - setuptools_scm
     - setuptools_scm_git_archive
-  run:
-    - python >=3.6,<3.8
-    - tensorflow-base >=2.1.0
-    - tensorflow-probability >=0.8.0
-    - scipy >=1.2
-    - uproot
-    - pandas
-    - numpy
-    - iminuit
-    - colorlog
-    - texttable
-    - tabulate
-    - ordered-set
-    - numdifftools
-    - colored
+      run:
     - colorama
-    # Workaround for https://github.com/conda-forge/tensorflow-probability-feedstock/pull/11
-    - decorator
-    - cloudpickle >=0.6.1
+    - colored
+    - colorlog
+    - dotmap
+    - iminuit >=2.3
+    - ipyopt
+    - nlopt
+    - numdifftools
+    - numpy >=1.16
+    - ordered-set
+    - pandas
+    - scipy >=1.2
+    - tabulate
+    - tensorflow ~=2.4.1
+    - tensorflow-addons
+    - tensorflow_probability ~=0.12.0
+    - texttable
+    - uproot >=4,<5
 
 test:
   imports:
