--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
       - setuptools_scm
       - setuptools_scm_git_archive
   run:
+      - python >=3.6,<3.9
       - colorama
       - colored
       - colorlog
