--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,18 +17,18 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<3.8
+    - python >=3.6,<3.10
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
-    - python >=3.6,<3.8
-    - tensorflow-base >=2.1.0
-    - tensorflow-probability >=0.8.0
+    - python >=3.6,<3.10
+    - tensorflow-base >=2.6.0,<2.7
+    - tensorflow-probability >=0.13.0,<0.14
     - scipy >=1.2
-    - uproot
+    - uproot >=4.0
     - pandas
     - numpy
-    - iminuit
+    - iminuit >=2.0
     - colorlog
     - texttable
     - tabulate
@@ -36,9 +36,6 @@ requirements:
     - numdifftools
     - colored
     - colorama
-    # Workaround for https://github.com/conda-forge/tensorflow-probability-feedstock/pull/11
-    - decorator
-    - cloudpickle >=0.6.1
 
 test:
   imports:
