--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ build:
   script: 
   - '{{ PYTHON }} -m pip install . --no-deps -vv '
   # HACK below, conda packages not available, unfortunately
-  - '{{ PYTHON }} -m pip install "tf-quant-finance<0.0.1.dev33" "tensorlfow-addons~=0.14.0"'
+  - '{{ PYTHON }} -m pip install "tf-quant-finance==0.0.1.dev32" "tensorflow-addons~=0.14.0"'
   noarch: python
 
 requirements:
