--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,24 @@
 {% set name = "zfit" %}
 {% set version = "0.8.3" %}
+{% set tf_quant_finance_version = "0.0.1.dev32" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 9d67a239c50bb740b59f4d3df74342afd0c06a1f124ca1813324e8195975e2ad
+  - url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+    sha256: 9d67a239c50bb740b59f4d3df74342afd0c06a1f124ca1813324e8195975e2ad
+  
+  - url: https://files.pythonhosted.org/packages/f9/49/9607da967df5d769f2741084aed6f7765183ec92b1b0e8619e5535a7c26d/tf_quant_finance-{{ tf_quant_finance_version }}-py2.py3-none-any.whl
+    sha256: 2e33eddfb1af9a066ab39e6d0670f85e2f0933898deb994b9a0c6cdcea574bcc
+    folder: tf_quant_finance
 
 build:
   number: 0
   script: 
   # HACK below, conda packages not available, unfortunately
-  - '{{ PYTHON }} -m pip install "tf-quant-finance==0.0.1.dev32" "tensorflow-addons~=0.14.0"'
+  - '{{ PYTHON }} -m pip install tf_quant_finance/*.whl  # "tf-quant-finance==0.0.1.dev32" "tensorflow-addons~=0.14.0"'
   - '{{ PYTHON }} -m pip install . --no-deps -vv '
   noarch: python
 
