--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,8 @@ requirements:
     - setuptools_scm_git_archive
   run:
     - python >=3.8,<3.11
-    - tensorflow-base >=2.12,<2.13
-    - tensorflow-probability >=0.20, <=0.21
+    - tensorflow-base >=2.120,<2.13.0
+    - tensorflow-probability >=0.20.0,<0.21.0
     - scipy >=1.3
     - boost-histogram
     - colorlog
