--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6,<3.8
+    - python >=3.6,<3.11
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
@@ -51,6 +51,7 @@ requirements:
     - asdf
     - ipyopt
     - nlopt
+    - attr
 
 
 test:
