--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,8 @@ requirements:
     - setuptools_scm_git_archive
   run:
     - python >=3.8,<3.12
-    - tensorflow-base >=2.12.0,<2.13.0
-    - tensorflow-probability >=0.20.0,<0.21.0
+    - tensorflow-base >=2.12.0,<2.14.0
+    - tensorflow-probability >=0.20.0,<0.22.0
     - scipy >=1.3
     - boost-histogram
     - colorlog
@@ -40,7 +40,7 @@ requirements:
     - tabulate
     - ordered-set
     - jacobi
-    - pydantic
+    - pydantic <2.0.0
     - numdifftools
     - pyyaml
     - colored
