--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
 build:
   number: 0
   script: '{{ PYTHON }} -m pip install . -vv '
+  noarch: python
 
 requirements:
   host:
@@ -48,8 +49,6 @@ requirements:
     - xxhash
     - uhi
     - asdf
-    - ipyopt  # [osx and x86_64]
-    - nlopt
     - attrs
     - zfit_interface
 
