--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - pip
     - python >=3.9,<3.13
+    - setuptools
     - setuptools_scm
     - setuptools_scm_git_archive
   run:
@@ -40,7 +41,7 @@ requirements:
     - tabulate
     - ordered-set
     - jacobi
-    - pydantic <2.0.0
+    - pydantic >=2.0.0
     - numdifftools
     - pyyaml
     - colored
