--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -29,6 +29,7 @@ requirements:
     - python >=${{ python_min }},<3.13
     - tensorflow-base >=2.16.0,<2.19.0
     - tensorflow-probability >=0.24.0,<0.26.0
+    - tf-keras
     - scipy >=1.3
     - boost-histogram
     - colorlog
