--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -28,7 +28,7 @@ requirements:
   run:
     - python-xxhash
     - tensorflow >=2.16.2,<2.20
-    - python >=${{ python_min }},<3.13
+    - python >={{ python_min }},<3.13
     - tensorflow-base >=2.16.0,<2.20.0
     - tensorflow-probability >=0.24,<0.27
     - tf-keras
