--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -22,9 +22,8 @@ requirements:
   host:
     - pip
     - python ${{ python_min }}.*
-    - setuptools
-    - setuptools_scm
-    - setuptools_scm_git_archive
+    - hatchling
+    - hatch-vcs
   run:
     - python-xxhash
     - tensorflow >=2.16.2,<2.20
@@ -59,6 +58,8 @@ requirements:
     - uhi
     - asdf
     - attrs
+    - ipyopt
+    - nlopt
     - zfit_interface
 
 tests:
